# riemann-c-client

./: .gitignore  AUTHORS  ChangeLog  Makefile  README.md  build.sh  clean.sh  common.c  common.h  configure.ac  debian.md  default.css  example.c  index.md  main.c  query.c  query.h  riemann_client.c  riemann_client.h  tcp.c  tcp.h  udp.c  udp.h
_includes/: header.html
_layouts/: default.html
examples/: Makefile  query_events.c  send_events.c
m4/: .gitignore
src/: Makefile  Makefile.am  attribute.c  client.c  common.c  event.c  message.c  query.c  tcp.c  udp.c
src/examples/: Makefile  Makefile.am  exmp01.c  exmp02.c  exmp03.c
src/riemann/: attribute.h  client.h  common.h  event.h  message.h  query.h  tcp.h  udp.h
src/tools/: Makefile.am  riemannc.c
